...
    <string name="insights_mode_year">Year</string>
    <string name="insights_mode_range">Range</string>
    <string name="insights_mode_recent">Recent</string>
    <string name="insights_result_mode_details">Details</string>
    <string name="insights_result_mode_chart">Chart</string>

    <string name="insights_title_mode_parameters">Date selection</string>
    <string name="insights_parameter_section_activity">Activities</string>
    <string name="insights_parameter_section_markdown">Text</string>
    <string name="insights_title_insights_day">Day</string>
    <string name="insights_title_insights_month">Month</string>
    <string name="insights_title_insights_week">Week</string>
    <string name="insights_label_select_week">Select Week</string>
    <string name="insights_label_insights_year">Year</string>
    <string name="insights_title_start_date">Start Date</string>
    <string name="insights_title_end_date">End Date</string>
    <string name="insights_label_recent_days">Recent Days</string>
    <string name="insights_activities_period_selector_title">Activity period</string>
    <string name="insights_activities_period_selector_sheet_title">Select %1$s</string>


    <string name="insights_section_tree">Breakdown</string>
    <string name="insights_label_tree_level">Display Level</string>
    <string name="insights_tree_level_all">All Levels</string>
    <string name="insights_tree_level_number">Level %1$d</string>
...
    <string name="insights_title_section_week">%1$s Week</string>
    <string name="insights_label_section_year">%1$s Year</string>
    <string name="insights_title_section_start_date">%1$s Start Date</string>
    <string name="insights_title_section_end_date">%1$s End Date</string>
    <string name="insights_label_section_recent_days">%1$s Recent Days</string>

    <string name="insights_cd_collapse">Collapse</string>
    <string name="insights_cd_expand">Expand</string>
    <string name="insights_cd_copy_markdown">Copy Markdown</string>
    <string name="insights_cd_edit_statuses">Edit %1$s statuses</string>
    <string name="insights_result_title_activity_timeline">Activity Timeline</string>
    <string name="insights_result_title_period_activities">Activities</string>
    <string name="insights_period_activities_empty">No activities recorded for this period.</string>
    <string name="insights_period_activities_overview">Overview</string>
...
